		  
	Seagull:
		* Patch adding "Directory" column to the shared-files dialog.
		* Patch to add "Swap to this file" option for sources marked as 
		  "Asked For Another File" on download queue.

	Unleashed:
		* Better fix for amuleweb's high CPU usage problem. Now main thread only gets
		  woken up when absolutely needed.
		  
	Xaignar:
		* Removed P4 specific optimizations from the embedded Crypto++ sources,
		  they would break very easily and crash aMule.
		* Fixed a bug where we would sometimes attempt to remove a client 
		  from the wrong file, resulting in dangling pointers and crashes.
		* Ensured that the statistics-dialog would be updated when preferences
		  relating to it where changed.
		* Added sainity checks to category-loading, to avoid adding categories
		  without incomming dir or name.
		* Initial fix for crashes if aMule tried to share an inaccessible folder.
		* The redraw problems on restoring from minimized state should be fixed.
		* Fixed the shared-files list, which would draw columns regardless 
		  of whenever or not they were hidden.
		* Fixed the progress-bars in the shared-files dialog. It should now
		  work properly for both part and completed files.
		* Fixed a bug in the ipfilter, where non-numeric chars on lines would
		  cause wrong ranges of IPs to be filtered.
		* Re-added the priority menu for servers, which had gone missing due
		  to a mistake.
		* Stopped the client-credits class from attempting to load older 
		  versions of the lists, which again would lead to mem-corruption.
		* Fixed hidden columns on download queue, which would still be drawn.
		* Added sainity checks to loading of clients.met file, since corrupted 
		  files would lead to potentially huge ammounts of mem-corruption.
		* Added "Completed Sources" column to the shared-files dialog.
		* Fixed a bug in sockets where disconnected sockets wouldn't be removed
		  immediatly, but left to timeout instead.